products/stream/4.7/oidc-okta-setup/index.md
# SSO with Okta and OIDC (Cribl.Cloud)


This page presents a walkthrough of setting up an OIDC SSO, using Okta as the example.

> Cribl.Cloud supports only OIDC backchannel authentication, not front-channel.
>
{.box .cloud}

> This page is a guide for configuring SSO for a Cribl.Cloud deployment.
> For information about an on-prem installation, see [SSO with Okta and OIDC (on-prem)](usecase-sso-okta).
{.box .info}

[Snippet not found: content/shared/4.7/snippets/_sso-fallback-access.md]

## Create OIDC App Integration {#create-app-oidc}

To create your app integration:

1. In Okta, navigate to the **Applications** section and select **Create App Integration**. 
2. Configure the app integration with the options below:
   
   - **Sign-in method**: `OIDC - OpenID Connect`
   - **Application type**: `Web Application`

### General Settings

3. Configure the app integration's **General Settings** with the options below:
   
   - **App integration name**: `Cribl.Cloud (OIDC)`
   - **Grant type**: Select `Authorization Code` and `Refresh Token`.
   - **Sign-in redirect URIs**: 
     - `https://login.cribl.cloud/login/callback`
     - `https://manage.cribl.cloud/<organizationID>/organization/sso`
   - **Sign-out redirect URIs**: [https://login.cribl.cloud/v2/logout](https://login.cribl.cloud/v2/logout)

> If your IDP is PingOne, you must also configure this (non-Okta) option:
> - **Authentication options**: `Allow Client Secret`
>
{.box .info}

### Assignments

4. Configure the **Assignments** pane with the following options:
   
   - **Controlled access**: `Limited access to selected groups`
   - **Selected groups**: The groups you mapped in [Configure Groups](sso-initial-steps).

5. **Save** your application.
6. Now return to the **General** tab's **General Settings** section and in **Refresh token behavior**, select `Use persistent token`. 

### Sign On Tab

7. In the **OpenID Connect ID Token** section, select **Edit**, and set the **Groups claim filter** to: `groups` : `Starts with` : `Cribl`.

8. To obtain the **Issuer URL** that you'll need to provide to Cribl in the next section, change the value in the **Issuer** field from `Dynamic` to `Okta URL`.

This step concludes the setup procedure for Okta (or other IDP). 

## Submit Your App Info to Cribl {#tell-cribl}

Next, provide Cribl with essential details about your application to implement the SSO setup on the Cribl side. 

1. On your Cribl.Cloud portal's [Organization page](cloud-portal#organization) select the **SSO** tab, then the **OIDC** lower tab. 

2. The **Web Application Settings** are prefilled for you, so you only need to fill in the **Cribl Cloud SSO Settings** section with the following details from your IDP client configuration:
   - Client ID
   - Client Secret
   - Issuer URL. Copy the **Issuer** URL from the **Sign On** > **OpenID Connect ID Token** section of your Okta environment.
     Make sure **Issuer URL** does not contain a trailing space.

## OIDC/Okta Chiclet Setup (Optional) {#oidc-chiclet}

If you want to initiate login from your Okta instance with OIDC authentication configured, an Okta admin can configure an app integration as follows:

1. From Okta's left nav, select the **Applications** page.
2. Find the OIDC application created earlier in the [OIDC/Okta Setup Example](#oidc).
3. Select that application, and in the **General** tab's **General Settings** section, select **Edit**.
4. In the **Initiate login URI** field, enter `https://manage.cribl.cloud/login?connection=<organizationID>` (where `<organizationID>` is your Cribl.Cloud Organization's ID).
5. Confirm with **Save** to complete the chiclet.

[Snippet not found: content/shared/4.7/snippets/_sso-final-step-cloud.md]
